--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
 
+    <string name="home_heading">Hey there {0}</string>
+    <string name="home_subheading">Looks like you\'re on a {0} day streak!</string>
+    <string name="home_footer">Keep it up!</string>
+
 </resources>
